[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/weapon.gd" type="Script" id=1]
[ext_resource path="res://sprites/weapons/shotgun.png" type="Texture2D" id=2]
[ext_resource path="res://sprites/muzzle flash.png" type="Texture2D" id=3]
[ext_resource path="res://sprites/flashlight.png" type="Texture2D" id=5]
[ext_resource path="res://sprites/weapons/pistol.png" type="Texture2D" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="weaponNode" type="Node2D"]
script = ExtResource( 1 )

[node name="pistol" type="Sprite2D" parent="."]
visible = false
texture = ExtResource( 7 )

[node name="bulletPoint" type="Node2D" parent="pistol" groups=["player"]]
position = Vector2( 37, 0 )

[node name="muzzleFlash" type="AnimatedSprite2D" parent="pistol"]
visible = false
position = Vector2( 37, 0 )
scale = Vector2( 1.96, 1.96 )
frames = SubResource( 1 )

[node name="muzzleFlashLight" type="PointLight2D" parent="pistol/muzzleFlash"]
position = Vector2( 2, 0 )
scale = Vector2( 0.593281, 0.5 )
texture = ExtResource( 5 )
texture_scale = 2.0
energy = 1.56
shadow_enabled = true

[node name="shotgun" type="Sprite2D" parent="."]
texture = ExtResource( 2 )
offset = Vector2( -10, 0 )

[node name="bulletPoint" type="Node2D" parent="shotgun" groups=["player"]]
position = Vector2( 50, 0 )

[node name="muzzleFlash" type="AnimatedSprite2D" parent="shotgun"]
visible = false
position = Vector2( 40, 0 )
scale = Vector2( 1.96, 1.96 )
frames = SubResource( 1 )

[node name="muzzleFlashLight" type="PointLight2D" parent="shotgun/muzzleFlash"]
position = Vector2( 2, 0 )
scale = Vector2( 0.593281, 0.5 )
texture = ExtResource( 5 )
texture_scale = 2.0
energy = 1.56
shadow_enabled = true

[node name="gunShotSound" type="AudioStreamPlayer" parent="."]
mix_target = 2
bus = "player sounds"

[node name="noAmmoClick" type="AudioStreamPlayer" parent="."]
mix_target = 2
bus = "player sounds"

[node name="reloadSound" type="AudioStreamPlayer" parent="."]
volume_db = 1.0
mix_target = 2
bus = "player sounds"

[node name="weaponSelect" type="AudioStreamPlayer" parent="."]
mix_target = 2
bus = "player sounds"

[node name="fireRate" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
